@@ -1504,16 +1504,19 @@
             if (options.legend.container != null)
                 $(options.legend.container).html(table);
             else {
-                var pos = "";
-                var p = options.legend.position, m = options.legend.margin;
+                var pos = "",
+                    p = options.legend.position,
+                    m = options.legend.margin;
+                if (m[0] == null)
+                    m = [m, m];
                 if (p.charAt(0) == "n")
-                    pos += 'top:' + (m + plotOffset.top) + 'px;';
+                    pos += 'top:' + (m[1] + plotOffset.top) + 'px;';
                 else if (p.charAt(0) == "s")
-                    pos += 'bottom:' + (m + plotOffset.bottom) + 'px;';
+                    pos += 'bottom:' + (m[1] + plotOffset.bottom) + 'px;';
                 if (p.charAt(1) == "e")
-                    pos += 'right:' + (m + plotOffset.right) + 'px;';
+                    pos += 'right:' + (m[0] + plotOffset.right) + 'px;';
                 else if (p.charAt(1) == "w")
-                    pos += 'left:' + (m + plotOffset.left) + 'px;';
+                    pos += 'left:' + (m[0] + plotOffset.left) + 'px;';
                 var legend = $('<div class="legend">' + table.replace('style="', 'style="position:absolute;' + pos +';') + '</div>').appendTo(target);
                 if (options.legend.backgroundOpacity != 0.0) {
                     // put in the transparent background
